js-for-sf-devs/main/default/objects/Bike_Gear__c/Bike_Gear__c.object-meta.xml
<CustomObject>
    <label>Bike Gear</label>
    <nameField>
        <displayFormat>GEAR-{0000}</displayFormat>
        <label>Bike Gear Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bike Gears</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>