js-for-sf-devs/main/default/objects/Bike_Gear__c/fields/Bike__c.field-meta.xml
<CustomField>
    <fullName>Bike__c</fullName>
    <label>Bike</label>
    <referenceTo>Bike__c</referenceTo>
    <relationshipLabel>Bike Gears</relationshipLabel>
    <relationshipName>Bike_Gears</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>