js-for-sf-devs/main/default/objects/Bike_Gear__c/fields/Gear_Type__c.field-meta.xml
<CustomField>
    <fullName>Gear_Type__c</fullName>
    <label>Gear Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Front (Drive)</fullName>
            </value>
            <value>
                <fullName>Rear (Driven)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>