js-for-sf-devs/main/default/objects/Bike_Gear__c/fields/Gear_Type_Unique__c.field-meta.xml
<CustomField>
    <fullName>Gear_Type_Unique__c</fullName>
    <label>Gear Type Unique</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>