js-for-sf-devs/main/default/objects/Bike_Gear__c/fields/Min_Gearing__c.field-meta.xml
<CustomField>
    <fullName>Min_Gearing__c</fullName>
    <label>Min Gearing</label>
    <summarizedField>Bike_Gear_Teeth__c.Number_of_Teeth__c</summarizedField>
    <summaryForeignKey>Bike_Gear_Teeth__c.Bike_Gear__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>